2007-04-13  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c (first_num): Removed function.
	* client-src/sendbackup.c (the_num): return the nth number in a string.
	* client-src/sendbackup.h (AM_SIZE_RE): Need a field.
	* client-src/sendbackup-dump.c: Use new AM_SIZE_RE.
	* client-src/sendbackup-gnutar.c: Use new AM_SIZE_RE.

2007-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Remove duplicate setsockopt(,,SO_REUSEADDR).
	* common-src/bsd-security.c: Use int for setsockopt.
	* common-src/stream.c (try_socksize): Use int for setsockopt.

2007-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Take value from chunker if it succeed and
				 taper fail.

2007-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Limit splitsize to 1G in PORT-WRITE.

2007-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/tapelist.c (append_to_tape): Don't call dump_tapelist.

2007-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-zd-mtx.sh.in: Exit with a message if the
					configuration file doesn't exist.

2007-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Fix segfault.

2007-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/krb5-security.c: Fix.

2007-03-12  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/set_commands.c (set_tape): Don't amfree(tape).
	* oldrecover-src/set_commands.c (set_tape): Don't amfree(tape).

2007-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Ouput quoted diskname in "DUMP SUMMARY"
	  section.

2007-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/scsi-linux.c, common-src/security-util.c,
	  common-src/stream.c, oldrecover-src/amrecover.c,
	  restore-src/restore.c, server-src/amcheck.c,
	  server-src/taper.c: Use SIZE_T_FMT and SSIZE_T_FMT instead of %z.

2007-02-22  Jean-Louis Martineau <martineau@zmanda.com>